Fix layout issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  */
 
 .container {
-  max-width: 600px;
+  max-width: 600px !important;
 }
 
 .dropdown * {
